test/corpus/quoted.txt
================================================================================
Single-quoted: Simple string
================================================================================

MESSAGE='Hello World'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Empty string
================================================================================

EMPTY=''

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string)))

================================================================================
Single-quoted: Preserves backslash-n literally
================================================================================

LITERAL='Hello\nWorld'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Preserves backslash-t literally
================================================================================

LITERAL='Tab:\tHere'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Preserves backslash-r literally
================================================================================

LITERAL='CR:\rHere'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Preserves double backslash literally
================================================================================

LITERAL='C:\\Users\\Name'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Preserves backslash-dollar literally
================================================================================

LITERAL='\$VAR'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Hash is literal (not comment)
================================================================================

HASH='#333'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Hash with space still literal
================================================================================

TEXT='value #not a comment'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Variable syntax is literal (no interpolation)
================================================================================

LITERAL='${VAR}'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Simple var syntax literal
================================================================================

LITERAL='$VAR'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Contains double quotes
================================================================================

KEY='outer "inner" end'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Password with special chars
================================================================================

PASSWORD='p@ss\word!#$%'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: JSON content (preserved as is)
================================================================================

JSON='{"key": "value", "num": 123}'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Unicode preserved
================================================================================

MESSAGE='Hello 世界'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Single-quoted: Emoji preserved
================================================================================

EMOJI='🚀 Launch!'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))

================================================================================
Double-quoted: Simple string
================================================================================

GREETING="Hello World"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Empty string
================================================================================

EMPTY=""

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string)))

================================================================================
Double-quoted: Escape newline
================================================================================

MESSAGE="Line1\nLine2"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape tab
================================================================================

MESSAGE="Col1\tCol2"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape carriage return
================================================================================

MESSAGE="Line1\rLine2"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape backslash
================================================================================

PATH="C:\\Users\\Name"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape double quote
================================================================================

JSON="{\"key\": \"value\"}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape dollar
================================================================================

ESCAPED="\${VAR}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: All escape sequences together
================================================================================

ALL="tab:\there\nquote:\"slash:\\dollar:\$"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence))))

================================================================================
Double-quoted: Contains single quotes (no escape needed)
================================================================================

KEY="outer 'inner' end"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Hash is literal (not comment)
================================================================================

COLOR="#333"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Hash with space still literal inside quotes
================================================================================

TEXT="value #not a comment"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Two consecutive escaped backslashes
================================================================================

KEY="value\\"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence))))

================================================================================
Double-quoted: Four backslashes (two escaped)
================================================================================

KEY="value\\\\"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Double-quoted: Six backslashes (three escaped)
================================================================================

KEY="\\\\\\"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Double-quoted: Unicode preserved
================================================================================

GREETING="Hello 世界"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Emoji preserved
================================================================================

EMOJI="🚀 Launch 🎉"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Complex JSON
================================================================================

CONFIG="{\"database\": {\"host\": \"localhost\", \"port\": 5432}}"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content)
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: RSA key style content
================================================================================

KEY="-----BEGIN RSA KEY-----"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: SQL query
================================================================================

QUERY="SELECT * FROM users WHERE id = 1"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Double-quoted: Escape at start
================================================================================

KEY="\nstart"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (escape_sequence)
      (double_quoted_content))))

================================================================================
Double-quoted: Escape at end
================================================================================

KEY="end\n"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content)
      (escape_sequence))))

================================================================================
Double-quoted: Only escapes
================================================================================

KEY="\n\t\r"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

================================================================================
Mixed: Both quote types in file
================================================================================

SINGLE='value1'
DOUBLE="value2"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content)))
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Space before quote: Grammar skips space and parses as quoted
================================================================================

KEY= "value"

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (double_quoted_string
      (double_quoted_content))))

================================================================================
Space before single quote: Grammar skips space and parses as quoted
================================================================================

KEY= 'value'

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (single_quoted_string
      (single_quoted_content))))
