test/corpus/unquoted_values.txt
================================================================================
Unquoted: Simple value
================================================================================

KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Alphanumeric
================================================================================

KEY=abc123xyz

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Just numbers
================================================================================

PORT=3000

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Decimal number
================================================================================

RATE=3.14159

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Negative number
================================================================================

OFFSET=-100

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Boolean true
================================================================================

ENABLED=true

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Boolean false
================================================================================

DEBUG=false

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: URL without fragment
================================================================================

URL=https://example.com/path

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: URL with port
================================================================================

API=http://localhost:3000/api

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: URL with fragment (hash without space is literal)
================================================================================

URL=http://example.com#home

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: URL with query string
================================================================================

URL=http://example.com?foo=bar&baz=qux

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Hex color short (hash without space)
================================================================================

COLOR=#333

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Hex color full (hash without space)
================================================================================

COLOR=#ff5733

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Database URL postgres
================================================================================

DATABASE_URL=postgres://user:pass@localhost:5432/mydb

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Database URL mysql
================================================================================

DATABASE_URL=mysql://user:pass@localhost:3306/mydb

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Redis URL
================================================================================

REDIS_URL=redis://localhost:6379/0

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Equals sign in value (base64)
================================================================================

BASE64=dGVzdA==

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Multiple equals in value
================================================================================

EQUATION=1+1=2=two

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Colon in value
================================================================================

TIME=12:30:45

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Semicolon in value
================================================================================

LIST=a;b;c;d

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Comma in value
================================================================================

CSV=a,b,c,d

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Pipe in value
================================================================================

COMMAND=cat|grep|sort

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Ampersand in value
================================================================================

QUERY=foo&bar=baz

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: At sign in value (email)
================================================================================

EMAIL=user@example.com

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Tilde in value (home path)
================================================================================

HOME=~/projects/myapp

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Asterisk in value (glob)
================================================================================

GLOB=*.txt

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Question mark in value
================================================================================

PATTERN=file?.txt

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Parentheses in value
================================================================================

FUNC=foo(bar)

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Brackets in value
================================================================================

ARRAY=[1,2,3]

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Braces in value
================================================================================

OBJ={a:1}

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Caret in value (regex)
================================================================================

REGEX=^start

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Dollar in value (regex end, not interpolated)
================================================================================

REGEX=end$

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (unquoted_content)
      (unquoted_content))))

================================================================================
Unquoted: Variable reference syntax (interpolated)
================================================================================

KEY=${OTHER_VAR}

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (variable_expansion))))

================================================================================
Unquoted: Simple variable reference (interpolated)
================================================================================

KEY=$OTHER

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (simple_variable))))

================================================================================
Unquoted: Backslash in middle (literal, not escape)
================================================================================

KEY=foo\nbar

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Backslash-t in middle (literal)
================================================================================

KEY=foo\tbar

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Windows path with backslashes
================================================================================

PATH=C:\Users\Name\Documents

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Double backslash
================================================================================

KEY=foo\\bar

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Embedded double quotes (literal)
================================================================================

KEY=foo"bar"baz

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Embedded single quotes (literal)
================================================================================

KEY=it's

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Mixed quotes (literal)
================================================================================

KEY=a"b'c"d'e

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Special characters mixed
================================================================================

KEY=!@#$%^&*()

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
      (unquoted_content)
      (unquoted_content))))

================================================================================
Unquoted: Unicode characters
================================================================================

GREETING=Hello世界

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Japanese text
================================================================================

MESSAGE=こんにちは

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Chinese text
================================================================================

MESSAGE=你好世界

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Arabic text
================================================================================

MESSAGE=مرحبا

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Emoji single
================================================================================

EMOJI=🚀

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Emoji multiple
================================================================================

EMOJI=🚀🎉✨🔥

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Emoji with text
================================================================================

STATUS=Ready🚀Launch

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Path unix style
================================================================================

PATH=/usr/local/bin:/usr/bin:/bin

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: IP address v4
================================================================================

HOST=192.168.1.100

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: IP address v6 short
================================================================================

HOST=::1

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: JWT token style
================================================================================

TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

================================================================================
Unquoted: Trailing whitespace stripped (before comment or EOL)
================================================================================

KEY=value

--------------------------------------------------------------------------------

(source_file
  (pair
    (key)
    (unquoted_value
          (unquoted_content))))

